Polarised light and collagen types

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -182,6 +182,7 @@ papillary dermis.
 \subsection{Statistical Methods}
 
 Data were imported into the R statistical program~\cite{rprog:13} and analysed using the {\em aov()} function for analysis of variance.
+Allowance was made for the subsampling design by choosing  an appropriate error level for the F tests in analysis of variance. 
 
 \section{Results}
 We follow the path of looking first at overall morphology of skin specimens, then at the details of collagen structure, and finally at other related measurements
@@ -279,17 +280,35 @@ Sanaz, can you please find out exactly what the data are?
 
 
 \subsubsection{Spatial location and structure of collagen}
-We have shown that there is more collagen in wrinkled sheep. We need to look and see if it occupies the same area of the dermis. We also need to investigate whether the arrangement of collagen fibres varies.
+We have shown that there is more collagen in wrinkled sheep. We need to look and see if it occupies the same part of the dermis. We also need to investigate whether the arrangement of collagen fibres varies.
 
 The best images for these purposes were taken with a 10x objective. Figure~\ref{fig:he10x} shows images of specimens from two sheep, one being wrinkled (a between-wrinkle specimen) and one being wrinkle-free.
 \input{fighe10x.tex}
-The most obvious difference is that in the wrinkled sheep specimen the collagen extends up into the follicular region, there being conspicuous amounts of collagen in and around the follicle bulbs. In the wrinkle-free sheep there is very littly amount of collagen in amongst the follicle bulbs, and the collagen immediately below the bulbs is fine structured and presumably of a reticular type. 
+The most obvious difference is that in the wrinkled sheep specimen the collagen extends up into the follicular region, there being conspicuous amounts of collagen in and around the follicle bulbs. In the wrinkle-free sheep there is very little amount of collagen in amongst the follicle bulbs, and the collagen immediately below the bulbs is fine structured and presumably of a reticular type. 
 
-There is also a difference in structure. In the wrinkled sheep there are large pieces of very dense collagen ( judging by the intensity of staining)  in the lower dermis, and amongst the follicles. In the wrinkle-free sheep there are some dense pieces of collagen ( more further down in the dermis) but these are not as dense and not as numerous as in the wrinkled specimen. If we look back to the PSR stained images of Figure~\ref{fig:psr40x}, these observations are confirmed. We must note that we are viewing thin (3 micron) sections. For bundles of collagen to show as large continuous areas in these sections they must align with the direction of sectioning. Hence we see some fibre bundles that have been sectioned across, and these show as small entities, and some that have been sectioned along and these show as large entities. There are fewer large entities in the wrinkle-free specimens in both Figures~\ref{fig:psr40x} and ~\ref{fig:he10x}. This difference is even discernable in the images viewed with a 4x objective shown in Figure~\ref{fig:trial24xhe}
+There is also a difference in structure. In the wrinkled sheep there are large pieces of very dense collagen ( judging by the intensity of staining)  in the lower dermis, and amongst the follicles. These large entities are presumably bundles of collagen fibrils. In the wrinkle-free sheep there are some dense pieces of collagen ( more further down in the dermis) but these are not as dense and not as large and not as numerous as in the wrinkled specimen. If we look back to the PSR stained images of Figure~\ref{fig:psr40x}, these observations are confirmed. We must note that we are viewing thin (3 micron) sections. For bundles of collagen to show as large continuous areas in these sections they must align with the direction of sectioning. Hence we see some fibre bundles that have been sectioned across, and these show as small entities, and some that have been sectioned along and these show as large entities. There are fewer large entities in the wrinkle-free specimens in both Figures~\ref{fig:psr40x} and ~\ref{fig:he10x}. This difference is even discernable in the images viewed with a 4x objective shown in Figure~\ref{fig:trial24xhe}
 
 We were not able to quantify these observations. The examples we have shown are from Trial 2, but the differences were consistent across both trials.
 
 \subsubsection{Type of collagen}
+The types of collagen relevant to skin are
+\begin{description}
+\item[Type I] or {\em hard} collagen forms thick bundles of eosin staining fibres. Is present in tendons, ligaments, and scar tissue. It binds things together.
+\item[Type III] or {\em soft or reticulate} collagen forms thin separate  eosin staining fibres which crosslink to form a fine mesh network supporting soft tissues.  It often occurs with Type I.
+\end{description}
+Both types occur together in skin. The strength, elasticity  and flexibility of skin come from the presence of collagen and elastin fibres, and presumably variations in these properties would derive from variations in the amounts and proportions of these types. For example changes in skin with ageing are partly a result of reduction in Type I collagen.
+
+One can distinguish the two Types of collagen simply from the size of the fibrils. For example in  the PSR stained images of Figure~\ref{fig:psr40x} the wrinkled specimen clearly has large bundles of fibrils and therefore a considerable amount of Type I collagen. The wrinkle-free specimen, however has fewer bundled fibrils, and lots of thin individual fibrils. This is also quite obvious in the H-E stained sections of Figures~\ref{fig:he10x} and ~\ref{fig:trial24xhe}.
+
+There is a somewhat contentious technique referred to in the Methods section, which uses polarized light microscopy to attempt to differentiate Type I from Type III collagen.  The collagen fibres are birefringent and it is asserted that they show coloured red, orange, yellow, or green on order of thickness of the bundles of fibrils. Thus, red and orange would be likely to indicate Type I collagen, and yellow and green would be likely to indicate Type III collagen.
+
+Figure~\ref{fig:polar} shows two polarized light images under a 4x objective comparing a wrinkled sheep with a wrinkle-free sheep.
+\input{figpolar.tex}
+The same sections viewed under normal bright field microscopy are shown in Figure~\ref{fig:nopolar}. 
+\input{fignopolar.tex}
+It can be seen that while both the wrinkled and wrinkle-free specimens have some lower dermal collagen ( stained red with PSR stain in Figure~\ref{fig:nopolar}), only the wrinkled specimen shows orange/red birefringence under polarised light (Figure~\ref{fig:polar}). 
+
+So, there is the proof that wrinkled sheep do not just have more collagen, but the extra collagen is Type I (hard). The wrinkle-free sheep apparently has only Type III (reticular) collagen. This confirms what we concluded in the previous section from looking at the size of collagen fibre bundles.
 
 \subsection{Follicle characteristics}
 A number of follicle attributes seem to differ between wrinkled and wrinkle-free sheep. These are documented below
