--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -310,6 +310,16 @@ It can be seen that while both the wrinkled and wrinkle-free specimens have some
 
 So, there is the proof that wrinkled sheep do not just have more collagen, but the extra collagen is Type I (hard). The wrinkle-free sheep apparently has only Type III (reticular) collagen. This confirms what we concluded in the previous section from looking at the size of collagen fibre bundles.
 
+\subsubsection{Fibroblasts}
+The dermal cells which produce collagen fibrils are called {\em fibroblasts} or mesenchymal stem cells.  Fibroblasts also produce reticular fibres, and the pre-papilla cells that aggregate during follicle formation.
+
+Some differences were observed in the fibroblasts in wrinkled and wrinkle-free sheep. We are only able to report Dr Watt's observation
+\begin{quote}
+"The dermal fibroblasts in the wrinkled sheep appear to be mature, slender fibroblasts (fibrocytes) with dark staining nuclei whereas wrinkle-free sheep have immature, plumb fibroblasts with pale staining nuclei. The density of fibrobasts in the wrinkled sheep also appears to be higher than in wrinkle-free sheep"
+\end{quote}
+
+Further observations would be required to confirm this. If correct it would mean that the dermal collagen of wrinkled sheep was under more active development at the time of sampling.
+
 \subsection{Follicle characteristics}
 A number of follicle attributes seem to differ between wrinkled and wrinkle-free sheep. These are documented below
 
