--- a/collagen-wrinkle-paper/nj-pgs-rewrite/figtrial2he.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/figtrial2he.tex
@@ -5,7 +5,7 @@
 \begin{figure}[!h]
   \centering
   \includegraphics[width=1.0\textwidth]{3456_4layers_4x.jpg}
-  \caption{Vertical section from a wrinkled sheep (3456) from Trial 2 Flock 1 stained with H-E. This section is from an untrimmed biopsy specimen and shows all 4 layers (Epidermis, Papillary dermis, Reticular dermis and Muscle layer).}
+  \caption{Vertical section from a wrinkled sheep (3456) from Trial 2 Flock 1 stained with H-E. This section is from an untrimmed biopsy specimen and shows all 5 layers (Epidermis, Papillary dermis, Reticular dermis, Areolar tissue and Muscle layer, and Adipose tissue).}
   \label{fig:trial2he}
 \end{figure}
 
