--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -218,14 +218,14 @@ The only images of untrimmed samples that I could find were the two below
   We can check on this by looking at a specimen , which was not trimmed before sectioning. Figure~\ref{fig:trial2he} shows one example section which is from a wrinkled sheep from Flock 1 of Trial 2.
 \input{figtrial2he.tex}
 
-It is clear from Figure~\ref{fig:trial2he} that the connective tissue in Layer 3 (lower or reticular dermis) does not extend further into Layer 4 (muscle layer). The muscle layer has only stained with the pink eosin counterstain and does not show the reticular structure of  connective tissue, except perhaps for  thin bands above and below the muscle mass. 
+It is clear from Figure~\ref{fig:trial2he} that there is connective tissue in Layer 3 (lower or reticular dermis), then a layer which may be muscle and/or connective tissue, then a wider layer of adipose tissue, and finally another layer of muscle and/or connective tissue.  The muscle layer(s) have only stained with the pink eosin counterstain and do not show the reticular structure of  connective tissue. 
 
-We are therefore concerned with the nature of this connective tissue in the lower dermis only. We wish to quantify and qualify the way in which it differs between wrinkled and wrinkle-free sheep.
+We are concerned with the nature of the connective tissue in the lower dermis only. We wish to quantify and qualify the way in which it differs between wrinkled and wrinkle-free sheep.
 
 \subsection{Detailed morphology of connective tissue} 
 The stain picrosirius red (PSR) was used to differentiate collagen from other components of connective tissue. Figure~\ref{fig:trial2psr} shows a section from the same sheep as Figure~\ref{fig:trial2he} examined with normal bright field microscopy. 
 \input{figtrial2psr.tex}
-The collagen is red. There is some collagen showing in the Layer 3 (papillary dermis), a dense band of collagen in Layer 3 (subpapillary dermis), and Layer 4 consists of yellow stained muscle tissue with a band of red collagen above and below it.  Fibres and follicle bulbs are stained yellow bty the picric acid component of PSR.
+The collagen is stained red. There is some collagen showing in the Layer 2 (papillary dermis), a dense band of collagen in Layer 3 (subpapillary dermis), and Layers 4 and 5 consist of yellow stained adipose tissue with a band of dense red collagen above and below it. These two bands are muscle tissuea which contains both collagen and elastin fibrils.  Wool fibres and follicle bulbs are stained yellow by the picric acid component of PSR. Within the  adipose tissue layer there are tiny tracks of red stained connective tissue, presumably between the fat cells.
 
 So we can conclude that the  connective tissue in Layer 3 of wrinkled sheep contains collagen. 
 
@@ -234,7 +234,7 @@ Since the nature of the connective tissue in Layer 3 is what seems to differ bet
 
 To quantify the amount of collagen in Layer 3, 5 fields under a 40x objective were chosen at random from within Layer 3 (reticular dermis) of each PSR stained section from each sheep in Trials 1 and 2. A typical image from one field of a wrinkled and a wrinke-free sheep is shown in Figure~\ref{fig:psr40x}.
 \input{figpsr40x.tex}
-The two fields shown in Figure~\ref{fig:psr40x} were chosen to be typical of the difference between wrinkled and wrinkle-free sheep. They show that the collagen in Layer 3 of wrinkled sheep is in larger aggregates and suggest that there is more collagen present ( as evidenced by more red stained areas) in wrinkled sheep. We set out to confirm this with some quantitative data.
+The two fields shown in Figure~\ref{fig:psr40x} were chosen to be typical of the difference between wrinkled and wrinkle-free sheep. They show that the collagen in Layer 3 of wrinkled sheep is in larger aggregates (bundles of collagen fibres), and suggest that there is more collagen present ( as evidenced by more red stained areas) in wrinkled sheep. We set out to confirm this with some quantitative data.
 
  The image analysis procedure described in the methods was used to assess the total amount of red stained pixels in each field.  What was actually calculated was the sum of the calibrated optical densities of all the pixels in the red image. The integrated (ie summed over all pixels) red pixel optical density for each sheep is shown  in Figure~\ref{fig:redpixt1} for Trial 1 and Figure~\ref{fig:redpixt2} for Trial 2.
 \input{figredpixt1.tex}
@@ -255,7 +255,7 @@ The difference between wrinkled and wrinkle-free SkinTypes is now shown to be hi
 
 There was also a significant amount of variation between sheep within the FlockNo and SkinType combinations. Sheep are much more variable than image Fields within a sheep, which is what the Residual term in Table~\ref{tab:redpixelt2aov} represents. In this analysis the Sheep term is the error term for all terms above it in the analysis of variance table, whereas in Trial 1 there was no sheep replication and we were forced to use the FlockNo:SkinType term as the error. This explains why the SkinType differences were less significant in Trial 1. 
 
-The actual means and their standard errors for integrateds optical density for both Trial 1 and Trial 2 are shown in Table~\ref{tab:redpixelodmeans}
+The actual means and their standard deviations for integrated optical density for both Trial 1 and Trial 2 are shown in Table~\ref{tab:redpixelodmeans}
 \input{tabredpixelodmeans.tex}
 We see that the wrinkle-free sheep actually have a very low amount of collagen in Trial 1. This is probably because the Trial 1 sheep were selected from SRS-Merino stud flocks and those chosen as wrinkle-free were likely to be extreme examples of wrinkle-free sheep, of a type not found in normal Merino flocks. 
 
@@ -267,22 +267,12 @@ The data and analyses show that there is more collagen in the lower dermis of wr
 Within wrinkled sheep there was no difference in amount of collagen between samples taken on a wrinkle or between wrinkles.
 
 
-\begin{verbatim}
-There are some questions hanging over these data.
-The data seem to be pixel greyvalues converted to optical density,
- then summed ( ie integrated) over all the pixels in the image. 
-The image used was probably the red component image.
-Maybe a threshold greyvalue was applied to accept only pixels
- exceeding a certain degree of redness.
-
-Sanaz, can you please find out exactly what the data are?
-\end{verbatim}
 
 
 \subsubsection{Spatial location and structure of collagen}
 We have shown that there is more collagen in wrinkled sheep. We need to look and see if it occupies the same part of the dermis. We also need to investigate whether the arrangement of collagen fibres varies.
 
-The best images for these purposes were taken with a 10x objective. Figure~\ref{fig:he10x} shows images of specimens from two sheep, one being wrinkled (a between-wrinkle specimen) and one being wrinkle-free.
+The best images for these purposes were taken with a 10x objective. Figure~\ref{fig:he10x} shows images of layers 2 and 3 in specimens from two sheep, one being wrinkled (a between-wrinkle specimen) and one being wrinkle-free.
 \input{fighe10x.tex}
 The most obvious difference is that in the wrinkled sheep specimen the collagen extends up into the follicular region, there being conspicuous amounts of collagen in and around the follicle bulbs. In the wrinkle-free sheep there is very little amount of collagen in amongst the follicle bulbs, and the collagen immediately below the bulbs is fine structured and presumably of a reticular type. 
 
@@ -338,8 +328,19 @@ Follicle curvaturemeasurements were made for Trial 2. There is a document detail
 Here we present only a summary of the results. Table~\ref{tab:curvmeasmeans} shows means for follicle depth, straight length of the follicle, curved length of the follicle and radius of curvature. 
 \input{tabcurvmeasmeans.tex}
 All four measurements differed between wrinkled and wrinkle-free sheep,and the differencess were significant for all four traits.
+There is a comprehensive analysis of these follicle curvature measurements in Watts and Jackson(2018)~\cite{watt:18}. 
+The important result is that the wrinkled sheep had a much smaller radius of curvature, meaning that the follicles were more curved in wrinkled sheep. This confirms the subjective follicle curvature scores, which were for Flock 1 of Trial 2 3.8 for wrinkled sheep and 1.7 for wrinkle-free sheep, and for Flock 2 of Trial 2 5.1 for wrinkled sheep and 2.7 for wrinkle-free sheep (means of 9 sheep in each case).
+
+ The follicles of wrinkled sheep were also slightly deeper and longer. 
 
 \subsubsection{Follicle density and S/P ratio}
+For Trial 2, some further measurements of the follicle and fibre characteristics were available, and are shown in Table~\ref{tab:follmeas}
+\input{tabfollmeas.tex}
+Wrinkled sheep had lower follicle density, lower S/P ratio, and coarser primary and secondary fibres.
+\begin{verbatim}
+Awaiting raw data so can complete aov for these traits.
+ Need to show differences are significant.
+\end{verbatim}
 
 \subsubsection{Follicular degeneration}
 Dr Watts saw evidence of follicle degeneration in wrinkled sheep. His statement was
@@ -348,6 +349,14 @@ Dr Watts saw evidence of follicle degeneration in wrinkled sheep. His statement 
 \end{quote}
 
 There are no measurements to support this statement. The fibre defects referred to are fibre naps. 
+
+\subsection{Wrinkle patterns over the body}
+The small {\em pin} wrinkles which all Merinos have do not seem to make any pattern. They are uniform across the body of the sheep. We are considering here the large folds which develop ( in wrinkled sheep only) after birth and up to maturity. These form a very consistent pattern which was documented by Carter(1943)~\cite{cart:43}. Dr Carter actually named each fold, and recognized that each fold along the body of the sheep was associated with successive vertebrae along the spine. The pattern is therefore very regular from sheep to sheep. Only the size of folds varies, not the pattern.
+
+Figure~\ref{fig:sheep} shows a photograph of two Merino ewes, with and without wrinkle. 
+\input{figsheep.tex}
+The wrinkled sheep in Figure~\ref{fig:sheep} is a good example of the pattern to which we refer.  Each fold runs vertically from dorsal to ventral positions, and there are approximately the same number of folds as vertebrae. So each fold appears to mark the position one dermatome area of skin, with the main nerve from the spine running either under the fold or between the folds. We do not know the spatial relationship between folds and nerve channels, but is appears to be a one-to-one relation.
+
 
 \clearpage
 \section{Discussion}
