Polarised light refs plus discussion

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -102,11 +102,11 @@ collagen content. Staining was performed manually.
 
 Sections were then reviewed microscopically (BX53 Olympus, Australia)),
 and images taken on 3 CCD camera (DP72, Olympus, Australia) under both
-bright field and polarized conditions for PSR staining.
+bright field and polarized conditions .
 
 For PSR collagen analysis, the 40x objective was employed at a fixed
 exposure to take high power images of 5 random deep dermal fields of
-view for computational analysis. 
+view for image analysis aimed at determining the amount of collagen in each field. 
 
 The five images for each sample were then uploaded for quantitative analysis
 via the ImagePro Plus (Media Cybernetics, USA) 7.1 software in which
@@ -116,37 +116,15 @@ fibres in the PSR stained specimen field.  This provided a measure of the area o
 A slightly better measure of the total amount of collagen in the field could be obtained by allowing for the intensity of red staining of each pixel. This would be a measure density of collagen within the pixel and the depth of collagen through the thickness of the section.  The greyvalues for each pixel were converted to optical density, and the optical densities summed ( ie integrated) over all pixels in the field.
 A mean was calculated for each specimen, averaged over 5 fields, and graphed.
 The optical density data for each field subjected to analysis of variance to test for differences between wrinkle-free and wrinkled sheep, and , in Trial 2, to test for differences between on-wrinkle and between-wrinkle specimens within the wrinkled sheep.
-
+All specimens were measured in this way, and this is one of the main quantitative results of the study.
 
 
 Polarised light was employed in order to try and determine the type of
 collagen present within each of the samples.
-\begin{verbatim}
-[Sanaz, you made a comment about this on Jim's last draft.
+Collagen fibres stained with PSR have enhanced birefringency compared to that in H-E stained sections (Junqueira et al(1979)~\cite{junq:79}). Under polarised light they show coloured red,orange, yellow, or green, in order of thickness of the bundles of fibres. Thus red or orange would indicate Type I or hard collagen (which has thick bundles of fibres) while yellow or green would indicate Type III collagen which has individual fibres in a net-like structure.
 
-The yellow and green reflectances are likely to indicate soft (Type III)
- collagen (Sanaz, please check this statement).
- Need to be careful here Jim, as no one has been able to definitively 
- prove the birefringences of PSR staining with collagen fibres,
- and some of the literature contradicts itself.
- I can pull a few papers to reference as a guide to the reviewers?
+Attempts to use polarised light images to make quantitative assesments of the amounts of each Type of collagen have been criticised in the literature (Lattouf et al (2014)~\cite{latt:14}).  The main issue seems to be that the birefringence is directional, only the fibres aligned with the direction of polarisation will show colours. We refrained from attempting this quantification, so our polarised light results are only qualitative.
 
-and this
-
-Birefringence measurements of PSR stained skin sections indicate that
- nearly all  (…. %) of the collagen sheets in the subfollicular
- layer of the papillary dermis have the deep red light reflectance 
-indicative of hard (type I) collagen. (Sanaz, please check this statement).
- Again Jim, we have to tread carefully here making definitive
- statements based on colour birefringence. We can certainly point
- out that the thicker fibres were red, and the thinner fibres more
- green, with some yellowish-orange colours in between.
-
-Can you make some statement that is either definitive or indicative
- and give a reference please?
-
-I think it belongs here in the Methods, not mixed up with Results where Jim had it.
-\end{verbatim}
 
 \subsubsection{Vertical skin sections}
 Vertical skin sections, approximately 0.3 millimetres wide, were cut
@@ -276,7 +254,7 @@ The best images for these purposes were taken with a 10x objective. Figure~\ref{
 \input{fighe10x.tex}
 The most obvious difference is that in the wrinkled sheep specimen the collagen extends up into the follicular region, there being conspicuous amounts of collagen in and around the follicle bulbs. In the wrinkle-free sheep there is very little amount of collagen in amongst the follicle bulbs, and the collagen immediately below the bulbs is fine structured and presumably of a reticular type. 
 
-There is also a difference in structure. In the wrinkled sheep there are large pieces of very dense collagen ( judging by the intensity of staining)  in the lower dermis, and amongst the follicles. These large entities are presumably bundles of collagen fibrils. In the wrinkle-free sheep there are some dense pieces of collagen ( more further down in the dermis) but these are not as dense and not as large and not as numerous as in the wrinkled specimen. If we look back to the PSR stained images of Figure~\ref{fig:psr40x}, these observations are confirmed. We must note that we are viewing thin (3 micron) sections. For bundles of collagen to show as large continuous areas in these sections they must align with the direction of sectioning. Hence we see some fibre bundles that have been sectioned across, and these show as small entities, and some that have been sectioned along and these show as large entities. There are fewer large entities in the wrinkle-free specimens in both Figures~\ref{fig:psr40x} and ~\ref{fig:he10x}. This difference is even discernable in the images viewed with a 4x objective shown in Figure~\ref{fig:trial24xhe}
+There is also a difference in structure. In the wrinkled sheep there are large pieces of very dense collagen ( judging by the intensity of staining)  in the lower dermis, and amongst the follicles. These large entities are presumably bundles of collagen fibrils. In the wrinkle-free sheep there are some dense pieces of collagen ( more further down in the dermis) but these are not as dense and not as large and not as numerous as in the wrinkled specimen. If we look back to the PSR stained images of Figure~\ref{fig:psr40x}, these observations are confirmed. We must note that we are viewing thin (4 micron) sections. For bundles of collagen to show as large continuous areas in these sections they must align with the direction of sectioning. Hence we see some fibre bundles that have been sectioned across, and these show as small entities, and some that have been sectioned along and these show as large entities. There are fewer large entities in the wrinkle-free specimens in both Figures~\ref{fig:psr40x} and ~\ref{fig:he10x}. This difference is even discernable in the images viewed with a 4x objective shown in Figure~\ref{fig:trial24xhe}
 
 We were not able to quantify these observations. The examples we have shown are from Trial 2, but the differences were consistent across both trials.
 
@@ -323,7 +301,7 @@ An analysis of variance of these scores is given in Table~\ref{tab:curvaov}
 This shows that the difference between wrinkle-free and wrinkled sheep was significant at the 1 percent level.
 
 \subsubsection{Follicle curvature measurements}
-Follicle curvaturemeasurements were made for Trial 2. There is a document detailing measurement methods and their statistical analysis available in Watts and Jackson (2018)~\cite{watt:18}. 
+Follicle curvature measurements were made for Trial 2. There is a document detailing measurement methods and their statistical analysis available in Watts and Jackson (2018)~\cite{watt:18}. 
 
 Here we present only a summary of the results. Table~\ref{tab:curvmeasmeans} shows means for follicle depth, straight length of the follicle, curved length of the follicle and radius of curvature. 
 \input{tabcurvmeasmeans.tex}
@@ -360,6 +338,27 @@ The wrinkled sheep in Figure~\ref{fig:sheep} is a good example of the pattern to
 
 \clearpage
 \section{Discussion}
+We have established the following from observations on adult Merino sheep
+\begin{itemize}
+\item wrinkled sheep have skin which is more supple and more compressible
+\item wrinkled sheep have more collagen in the lower dermis
+\item wrinkled sheep have more Type I collagen in the lower dermis
+\item in wrinkled sheep the collagen in the lower dermis extends upwards around the follicle bulbs into the upper dermis
+\item there is no difference in collagen between sites on a wrinkle or between wrinkles within wrinkled sheep
+\item wrinkled sheep have more highly curved follicles
+\item wrinkled sheep have lower follicle density and lower S/P ratio as adults
+\item wrinkled sheep have coarser fibre diameters, both primary and secondary fibres as adults
+\end{itemize}
+
+In addition we know the following from other published work
+\begin{itemize}
+\item pin wrinkles are small and are present at birth and remain into adulthood. They are mainly a characteristic of Merino sheep
+\item large folds grow in size as the sheep matures, but can be visible at birth. They are also mainly a characteristic of Merino sheep.
+\item large folds consist of epidermis, papillary dermis, and lower or reticular dermis, but not the muscle and fat layers 
+\item collagen is present in the foetal dermis from about day 80, ie at about the same time as when the secondary derived follicles are forming
+\item collagen in the dermis gradually becomes more Type I as the sheep matures 
+\item developing follicles in the foetus can be seen to be curved, before they grow a fibre
+\end{itemize}
 
 
 \clearpage
@@ -401,11 +400,17 @@ Jackson, N., Maddocks, I.G., Lax, J., Moore, G.P.M. and Watts, J.E. (1990) Merin
 \bibitem{jack:17b}
 Jackson, N. and Watts, J.E. (2017) What is known about the genetics of wrinkle score in Merino sheep? URL https://github.com/nevillejackson/Fleece-genetics/wrinkle/wrinkle.pdf
 
+\bibitem{junq:79}
+Junqueira L.C.U., Bignolas G., Brentani R.R. Picrosirius staining plus polarization microscopy, a specific method for collagen detection in tissue sections. Histochem J 1979; 11, 447-455
+
 \bibitem{kier:99}
 Kiernan, J.A.(1999) Histological and Histochemical Methods: Theory and Practice. Ed 3. Butterworth Heinemann, Oxford, UK
 
 \bibitem{knig:93}
 Knight, K.R., Lepore, D.A., Horne, R.S., Ritz, M., Kumta, S. and O'Brian, B.M. (1993) Collagen content of uninjured skin and scar tissue in foetal and adult sheep. Int. J. Exp. Pathol. 74(6):583-591
+
+\bibitem{latt:14}
+Lattouf, R., Younes, P., Lutomski, D., Naaman, N., Godeau, G., Senni, K. and Changotade, S. (2014  Picrosirius red staining: a useful tool to appraise collagen networks in normal and pathological tissues. J. Histochem. Cytochem. 62(10): 751-758
 
 \bibitem{madd:88}
 Maddocks, I.G. and Jackson, N. (1988) Structural studies of sheep, cattle, and goat skin. CSIRO, Division of Aimal Production, Sydney.
