Add aov for follicle characteristics

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -315,10 +315,9 @@ The important result is that the wrinkled sheep had a much smaller radius of cur
 For Trial 2, some further measurements of the follicle and fibre characteristics were available, and are shown in Table~\ref{tab:follmeas}
 \input{tabfollmeas.tex}
 Wrinkled sheep had lower follicle density, lower S/P ratio, and coarser primary and secondary fibres.
-\begin{verbatim}
-Awaiting raw data so can complete aov for these traits.
- Need to show differences are significant.
-\end{verbatim}
+
+Analyses of variance (Table~\ref{tab:follmeasaov}) confirmed that these differences between wrinkled and wrinkle-free sheep were significant. The Flock differences were not significant.
+\input{tabfollmeasaov.tex}
 
 \subsubsection{Follicular degeneration}
 Dr Watts saw evidence of follicle degeneration in wrinkled sheep. His statement was
