Add refs to dicscussion

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -328,12 +328,13 @@ Dr Watts saw evidence of follicle degeneration in wrinkled sheep. His statement 
 There are no measurements to support this statement. The fibre defects referred to are fibre naps. 
 
 \subsection{Wrinkle patterns over the body}
-The small {\em pin} wrinkles which all Merinos have do not seem to make any pattern. They are uniform across the body of the sheep. We are considering here the large folds which develop ( in wrinkled sheep only) after birth and up to maturity. These form a very consistent pattern which was documented by Carter(1943)~\cite{cart:43}. Dr Carter actually named each fold, and recognized that each fold along the body of the sheep was associated with successive vertebrae along the spine. The pattern is therefore very regular from sheep to sheep. Only the size of folds varies, not the pattern.
+The small {\em pin} wrinkles which all Merinos have do not seem to make any pattern. They are uniform across the body of the sheep. We are considering, in this section, patterns in the large folds which develop ( in wrinkled sheep only) after birth and up to maturity. These form a very consistent pattern which was documented by Carter(1943)~\cite{cart:43}. Dr Carter actually named each fold, and recognized that each fold along the body of the sheep was associated with successive vertebrae along the spine. The pattern is therefore very regular from sheep to sheep. Only the size of folds varies, not the pattern.
 
 Figure~\ref{fig:sheep} shows a photograph of two Merino ewes, with and without wrinkle. 
 \input{figsheep.tex}
-The wrinkled sheep in Figure~\ref{fig:sheep} is a good example of the pattern to which we refer.  Each fold runs vertically from dorsal to ventral positions, and there are approximately the same number of folds as vertebrae. So each fold appears to mark the position one dermatome area of skin, with the main nerve from the spine running either under the fold or between the folds. We do not know the spatial relationship between folds and nerve channels, but is appears to be a one-to-one relation.
+The wrinkled sheep in Figure~\ref{fig:sheep} is a good example of the pattern to which we refer.  Each fold runs vertically from dorsal to ventral positions, and there are approximately the same number of folds as vertebrae. So each fold appears to mark the position one {\em dermatome} area of skin, with the main nerve from the spine running either under the fold or between the folds. We do not know the spatial relationship between folds and nerve channels, but is appears to be a one-to-one relation.
 
+The folds on the side of a sheep always run vertically. The rows of follicle groups on the side of a sheep always run vertically. In mosaic sheep (Fraser and Short(1960)~\cite{fras:60}), which are somatic fleece mutations, the patterns of mutant fleece always run vertically.  These phenomena reflect the way the skin tissue develops. The skin develops as a series of separate patches called dermatomes, each patch being associated with one nerve descending from the spine. It is not clear why fold development follows this pattern, but it is quite obvious that it does so.
 
 \clearpage
 \section{Discussion}
@@ -343,7 +344,7 @@ We have established the following from observations on adult Merino sheep
 \item wrinkled sheep have more collagen in the lower dermis
 \item wrinkled sheep have more Type I collagen in the lower dermis
 \item in wrinkled sheep the collagen in the lower dermis extends upwards around the follicle bulbs into the upper dermis
-\item there is no difference in collagen between sites on a wrinkle or between wrinkles within wrinkled sheep
+\item within wrinkled sheep, there is no difference in collagen between sites on a wrinkle or between wrinkles 
 \item wrinkled sheep have more highly curved follicles
 \item wrinkled sheep have lower follicle density and lower S/P ratio as adults
 \item wrinkled sheep have coarser fibre diameters, both primary and secondary fibres as adults
@@ -351,12 +352,14 @@ We have established the following from observations on adult Merino sheep
 
 In addition we know the following from other published work
 \begin{itemize}
-\item pin wrinkles are small and are present at birth and remain into adulthood. They are mainly a characteristic of Merino sheep
+\item pin wrinkles are small and are present at birth and remain into adulthood. They are mainly a characteristic of Merino sheep (Carter(1943)~\cite{cart:43})
 \item large folds grow in size as the sheep matures, but can be visible at birth. They are also mainly a characteristic of Merino sheep.
-\item large folds consist of epidermis, papillary dermis, and lower or reticular dermis, but not the muscle and fat layers 
-\item collagen is present in the foetal dermis from about day 80, ie at about the same time as when the secondary derived follicles are forming
-\item collagen in the dermis gradually becomes more Type I as the sheep matures 
-\item developing follicles in the foetus can be seen to be curved, before they grow a fibre
+\item large folds consist of epidermis, papillary dermis, and lower or reticular dermis, but not the muscle and fat layers (Mitchell et al (1984)~\cite{mitc:84})
+\item collagen is present in the foetal dermis from about day 80, ie at about the same time as when the secondary derived follicles are forming (Knight et al (1993)~\cite{knig:93})
+\item collagen in the dermis gradually becomes more Type I as the sheep matures (Knight et al (1993)~\cite{knig:93})
+\item collagen in the dermis changes from a reticular arrangement ot a complex arrangement with intertwining bundles of fibres, starting at about 5 months of age. (Kozlowski (1966)~\cite{kozl:66})
+\item developing follicles in the foetus can be seen to be curved, before they grow a fibre (Hardy and Lyne (1956)~\cite{hard:56})
+\item in developing skin of Karakul sheep follicle bulbs can be seen to be deflected sideways by the collagen layer in the dermis (Dreyer, et al (1983)~\cite{drey:83})
 \end{itemize}
 
 
@@ -372,11 +375,17 @@ Brown, G.H., and Turner, Helen Newton. (1968) Response to selection in Australia
 \bibitem{cart:43}
 Carter H.B. (1943) Studies in the biology of the skin and fleece of sheep. 1. The development and general histology of the follicle group in the skin of the Merino. 2. The use of tanned sheepskin in the study of follicle population density. 3. Notes on the arrangement, nomenclature, and variation of skin folds and wrinkles in the Merino. C.S.I.R. Bulletin No 164, Melbourne, 1943
 
+\bibitem{drey:83}
+Dreyer, J.H., Rossouw, E. and Steyn, M.G. (1983) The histology of the pre-natal hair follicle and hair fibre in four curl tyes of the Karakul sheep.  S. Afr. J. Anim. Sci. 13(3): 180-91
+
 \bibitem{fras:60}
 Fraser A.S and Short B.F. (1960) The Biology of the Fleece. Animal Research Laboratories Technical Paper No 3. CSIRO Melbourne 1960.
 
 \bibitem{gord:08}
 Gordon-Thompson, C., Botto, S.A., Cam, G.R., and Moore, G.P.H. (2008) Notch pathway gene expression and wool follicle cell fates. Aust. J. Exp. Agric. 48(5) 648-656
+
+\bibitem{hard:56}
+Hardy, M.H. and Lyne, A.G. (1956) The pre-natal development of wool follicles in Merino sheep. Aust. J. biol. Sci. 9:423:41
 
 \bibitem{jack:75}
 Jackson, N., Nay, T, and Turner, Helen Newton (1975) Response to selection in Australian Merino sheep. VII Phenotypic and genetic parameters for some wool follicle characteristics and their correlation with wool and body traits. Aust. J. Agric. Res. 26:937-57
@@ -407,6 +416,9 @@ Kiernan, J.A.(1999) Histological and Histochemical Methods: Theory and Practice.
 
 \bibitem{knig:93}
 Knight, K.R., Lepore, D.A., Horne, R.S., Ritz, M., Kumta, S. and O'Brian, B.M. (1993) Collagen content of uninjured skin and scar tissue in foetal and adult sheep. Int. J. Exp. Pathol. 74(6):583-591
+
+\bibitem{kozl:66}
+Kozslowski, G.P. (1966) The microscopic anatomy of theintegument of sheep. M.S. Thesis, Michigan State University, 1966
 
 \bibitem{latt:14}
 Lattouf, R., Younes, P., Lutomski, D., Naaman, N., Godeau, G., Senni, K. and Changotade, S. (2014  Picrosirius red staining: a useful tool to appraise collagen networks in normal and pathological tissues. J. Histochem. Cytochem. 62(10): 751-758
