Discussion - complete refs on items

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -340,7 +340,7 @@ The folds on the side of a sheep always run vertically. The rows of follicle gro
 \section{Discussion}
 We have established the following from observations on adult Merino sheep
 \begin{itemize}
-\item wrinkled sheep have skin which is more supple and more compressible
+\item wrinkled sheep have skin which is less supple and less compressible
 \item wrinkled sheep have more collagen in the lower dermis
 \item wrinkled sheep have more Type I collagen in the lower dermis
 \item in wrinkled sheep the collagen in the lower dermis extends upwards around the follicle bulbs into the upper dermis
@@ -352,12 +352,13 @@ We have established the following from observations on adult Merino sheep
 
 In addition we know the following from other published work
 \begin{itemize}
+\item wrinkles can be observed forming in foetal skin of Karakul and Merino lambs at around 100 days of gestation (Bogolyubsky(1940~\cite{bogo:40})
 \item pin wrinkles are small and are present at birth and remain into adulthood. They are mainly a characteristic of Merino sheep (Carter(1943)~\cite{cart:43})
-\item large folds grow in size as the sheep matures, but can be visible at birth. They are also mainly a characteristic of Merino sheep.
+\item large folds grow in size as the sheep matures, but can be visible at birth. They are also mainly a characteristic of some Merino sheep. Large folds form in a pattern in which there is a one to one relation between folds and dermatmes (Carter(1943)~\cite{cart:43})
 \item large folds consist of epidermis, papillary dermis, and lower or reticular dermis, but not the muscle and fat layers (Mitchell et al (1984)~\cite{mitc:84})
 \item collagen is present in the foetal dermis from about day 80, ie at about the same time as when the secondary derived follicles are forming (Knight et al (1993)~\cite{knig:93})
 \item collagen in the dermis gradually becomes more Type I as the sheep matures (Knight et al (1993)~\cite{knig:93})
-\item collagen in the dermis changes from a reticular arrangement ot a complex arrangement with intertwining bundles of fibres, starting at about 5 months of age. (Kozlowski (1966)~\cite{kozl:66})
+\item collagen in the dermis changes from a reticular arrangement to a complex arrangement with intertwining bundles of fibres, starting at about 5 months of age. (Kozlowski (1966)~\cite{kozl:66})
 \item developing follicles in the foetus can be seen to be curved, before they grow a fibre (Hardy and Lyne (1956)~\cite{hard:56})
 \item in developing skin of Karakul sheep follicle bulbs can be seen to be deflected sideways by the collagen layer in the dermis (Dreyer, et al (1983)~\cite{drey:83})
 \end{itemize}
