--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -363,6 +363,37 @@ In addition we know the following from other published work
 \item in developing skin of Karakul sheep follicle bulbs can be seen to be deflected sideways by the collagen layer in the dermis (Dreyer, et al (1983)~\cite{drey:83})
 \end{itemize}
 
+We have two hypotheses which explain the above observations
+\subsection{Two layer folding hypothesis}
+Perhaps the most important result above is the negative one. There were no histological differences between skin sampled on a fold or between folds in wrinkled sheep. A fold is therefore not and additional organelle which grows on top of the skin; the tissues within a fold are exactly the same tissues as in skin between folds. What , therefore causes the skin to fold?
+
+We maintain that skin folds are formed the same way as all other tissue folds. A fold forms because some layers of the skin grow faster than other layers.  Any dual layer structure will curve if one layer changes length or area faster than the other layer. A bimetal strip is one example. In biology, curved surfaces are formed by non-allometeric growth. (Thompson(1917)~\cite{thom:17}).
+
+We can identify the layers involved. In the case of large folds, we know from Mitchell et al (1984)~\cite{mitc:84} that a fold contains epidermis, papillary dermis and reticular or lower dermis, but not the muscle and fat layers.  So the two super-layers that differ in growth rate are (a) layers 1,2, 3 together, and (b) layers 4 and 5 together. s sheep mature and large folds form super-layer (a) grows faster.  So why do sheep with large folds have more collagen and more Type 1 (hard) collagen? Because the presence of hard collagen in the lower dermis binds the lower edge of the dermis to the muscle and fat layers below and prevents them from expanding to match the growth of super-layer (a). The collagen binds the boundary beteen super-layers (a) and (b).
+
+That is not the whole story of large folds. For large folds to form there has to also be excessive growth of super-layer(a) as the sheep matures. We are not sure whether this excess growth of (a) occurs as a result of maturation of the large number of secondary original follicles in Merinos, or whether it is just a genetic signal to grow more skin. What happens in Merino sheep without large folds is that the excess growth of super-layer (a) still occurs, but super-layer (b)  is not bound by hard collagen at the boundary with super-layer(a), so both layers can expand together and the skin on the sheep feels loose and supple. Other breeds of sheep ( eg British breeds) do not have the excessive growth of super-layer (a) as they mature, so they do not form folds, regardless of whether they have hard collagen. This suggests that the excessive growth of super-layer (a) in Merinos is indeed due to the need to fully develop large numbers of secondary original follicles. 
+
+In the case of pin-wrinkle, we know that the tiny pin-wriunkle folds start to form in-utero at around days 80 to 100. That is exactly the time window in which the large population of secondary original follicles is forming in Merino sheep. We suggest that the formation of large numbners of secondary original follicles dramatically increases expansion of the epidermis and papillary dermis, while the lower dermis is held at a slower growth by the development of collagen. So in the case of pin-wrinkle the super layers are (a) epidermis and papillary dermis, and (b) lower dermis, muscle and fat layers.
+
+So the difference between large folds and pin wrinkle is in the layers involved and in the time of formation. The two layer hypothesis applies to both.
+
+\subsubsection{Two factor wrinkle formation hypothesis}
+Given the above, we are led to suggest that there are two independent factors involved in fold formation
+\begin{description}
+\item[presence of hard collagen in lower dermis] this prevents the hypodermis from expanding to match upper dermal growth
+\item[secondary original follicles] this leads to excessive growth of the upper dermis both in utero and as the sheep matures.
+\end{description}
+
+These 2 factors apply to both pin wrinkle and large folds. It is just the layersthat differ.
+ 
+\subsection{Follicle curvature hypothesis}
+Perhaps the next most important result is the observation that wrinkled Merinos invariably have curved follicles. We suggest that this happens because the downgrowth of follicle plugs from the epidermis into the papillary dermis which occurs from days 60-100 in the foetus is interfered with by the presence of large amounts of developing collagen in the lower part of the papillary dermis and the reticular dermis. Growth of follicle plugs downward is inhibited by the presence of collagen and they continue to grow, but deflect sideways.
+
+There are photomicrographs in Hardy and Lyne (1956)~\cite{hard:56} in which one can actually see follicle plugs curved, before the are growing a fibre. If this is correct we have actually solved the 'chicken and egg' argument about fibre curvature and follicle curvature. Follicle curvature comes first. The fibres curve because they grow into a curved tube. The bilateral ortho and para cortex arrangement in curved Merino fibres is a consequence of the fibre developing in a curved tubular space, not a cause of the curvature. The cortical cells differentaite differently on the inside of the curve because they are in a cramped space.
+
+So the spatial distibution of collagen is involved in follicle curvature. That is not quite the same thing as presence of hard collagen, but it suggests that follicle curvature and wrinkle have one common cause.
+
+
 
 \clearpage
 \begin{thebibliography}{99}
@@ -452,6 +483,9 @@ Ryder, M.L. and Stevenson, S.K.(1968) Wool Growth. Academic Press, London.
 
 \bibitem{sedd:31}
 Seddon, H.R., Belschner, H.G. and Mulhearn, C.R. (1931)  Studies on cutaneous myiasis of sheep. Sew South Walse Department of Agriculture, Science Bulletin No 37, 1931
+
+\bibitem{thom:17}
+Thompson, D'Arcy. (1917) Growth and Form. Cambridge University Press, Cambridge, England.
 
 \bibitem{turn:56} 
 Turner, Helen Newton (1956) Anim. Breed. Abstr. 24:87-118
